Feature: Realizando a logica da pagina de calculo da porcentagem

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <nav class="menu">
 
 
-            <a class="menu-item" href="#">Porcentagem</a>
-            <a class="menu-item" href="#">IMC</a>
-            <a class="menu-item" href="#">Regra de 3</a>
+            <a class="menu-item" href="./pages/percentage.html">Porcentagem</a>
+            <a class="menu-item" href="./pages/imc.html">IMC</a>
+            <a class="menu-item" href="./pages/regra.html">Regra de 3</a>
 
 
         </nav>
@@ -31,7 +31,7 @@
 
         <section class="main-tools">
 
-            <a href="" class="main-tool">
+            <a href="./pages/percentage.html" class="main-tool">
 
 
                 <img src="assets/porcentagem.svg" alt="Porcentagem">
@@ -40,14 +40,14 @@
 
             </a>
 
-            <a href="" class="main-tool">
+            <a href="./pages/imc.html" class="main-tool">
 
                 <img src="assets/balanca.svg" alt="Porcentagem">
                 <p>Calcular IMC</p>
 
             </a>
 
-            <a href="" class="main-tool">
+            <a href="./pages/regra.html" class="main-tool">
 
                 <img src="assets/rgd3.svg">
                 <p>Calcular Regra de 3</p>
